--- a/index.html
+++ b/index.html
@@ -33,10 +33,9 @@
 
     <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
     
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="preconnect" href="https://www.googletagmanager.com">
     <link rel="preconnect" href="https://script.google.com">
+    <link rel="preconnect" href="https://cdn.jsdelivr.net">
 
     <link rel="preload" href="images/banners/hero-mobile.jpg" as="image">
 
