Mejora en carga del portal

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
     <link rel="preconnect" href="https://script.google.com">
     <link rel="preconnect" href="https://cdn.jsdelivr.net">
 
+    <link rel="preload" href="images/logo/logo-180x180.png" as="image">
     <link rel="preload" href="images/banners/hero-mobile.jpg" as="image">
 
     <title>El Oso</title>
@@ -2346,7 +2347,6 @@
         .portal-container {
             color: #fff;
             width: 90%;
-            max-width: 600px;
             border-radius: 12px;
             padding: 50px 40px;
             text-align: center;
