Optimizar velocidad de carga mobile

--- a/index.html
+++ b/index.html
@@ -2561,7 +2561,7 @@
             </div>
             <picture>
                 <source media="(max-width: 768px)" srcset="images/banners/hero-mobile.jpg">
-                <img class="bg" src="images/banners/hero.jpg" alt="El Oso - Hero Banner" width="1920" height="1080" loading="eager">
+                <img class="bg" src="images/banners/hero.jpg" alt="El Oso - Hero Banner" width="1920" height="1080" loading="lazy">
             </picture>
         </section>
 
