--- a/index.html
+++ b/index.html
@@ -2515,7 +2515,7 @@
         </div>
         <div class="portal-container">
             <div class="portal-logo">
-                <img src="images/logo/logo-180x180.png" alt="El Oso Logo" width="180" height="180">
+                <img src="images/logo/logo-180x180.png" alt="El Oso Logo" width="180" height="180" loading="eager">
             </div>
             <div class="portal-content">
                 <h1><strong class="portal-strong">¿BUSCÁS EL REFUGIO?</strong></h1>
