--- a/index.html
+++ b/index.html
@@ -2536,7 +2536,7 @@
     <meta name="google-site-verification" content="xL0bF1MF2lTpuOwKsNkd2PNiPxs-o35IuaLXh0v3slE">
 </head>
 <body>
-    <div id="welcomePortal" class="welcome-portal active">
+    <div id="welcomePortal" class="welcome-portal">
         <div class="portal-background-blur"></div>
         <div id="snowCanvasContainer" class="snow-canvas-container">
             <canvas id="snowCanvas"></canvas>
@@ -5191,9 +5191,9 @@
         `;
         document.head.appendChild(style);
 
-        document.addEventListener('DOMContentLoaded', function() {
-            window.welcomePortal = new WelcomePortal();
-        });
+        //document.addEventListener('DOMContentLoaded', function() {
+        //    window.welcomePortal = new WelcomePortal();
+        //});
     </script>
 </body>
 </html>
