Margen botón comprar

--- a/index.html
+++ b/index.html
@@ -1316,6 +1316,7 @@
             box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
             position: relative;
             overflow: hidden;
+            margin-bottom: 50px;
         }
         .checkout-btn:hover:not(:disabled) {
             background: #0a8800;
