Error al cargar imagen del modal

--- a/index.html
+++ b/index.html
@@ -3159,7 +3159,7 @@
 
                 this.modalContent.innerHTML = `
                     <div class="product-modal-image">
-                        <img src="${product.image}" alt="${product.name}" loading="lazy" width="400" height="400">
+                        <img src="${product.image}?v=13" alt="${product.name}" loading="lazy" width="400" height="400">
                     </div>
                     <div class="product-modal-info">
                         <h2 class="product-modal-title">${product.name.split(' - ')[0]}</h2>
